Bug #36001 Partitions: spelling and using some error messages
Submitted: 11 Apr 2008 19:13 Modified: 15 Mar 9:34
Reporter: Peter Gulutzan
Status: Closed
Category:Server: Partition Severity:S3 (Non-critical)
Version:5.1.25-rc-debug OS:Linux (SUSE 10 | 32-bit)
Assigned to: Mattias Jonsson Target Version:5.1+
Triage: Triaged: D4 (Minor)

[11 Apr 2008 19:13] Peter Gulutzan
Description:
I complain about the following partition-related
error messages, which I notice in errmsg.sys.

"More partitions to reorganise than there are partitions"
"REORGANISE PARTITION can only be used to reorganise partitions not to change their
numbers"
"REORGANISE PARTITION without parameters can only be used on auto-partitioned tables using
HASH PARTITIONs"
"When reorganising a set of partitions they must be in consecutive order"
MySQL uses American spelling in the manual, so "reorganize" not "reorganise".

"Foreign key condition is not yet supported in conjunction with partitioning"
Say "clause" not "condition".
And make sure to use this error message when somebody tries to
use a foreign key / partition combination; do not use
"...". 

How to repeat:
mysql> create table tp (s1 int, foreign key (s1) references tp0 (s1)) engine=myisam
partition by hash (s1);
ERROR 1215 (HY000): Cannot add foreign key constraint
[11 Apr 2008 21:36] Miguel Solorzano
Thank you for the bug report. Verified as described.
[3 Jul 2008 21:12] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/48981

2693 Mattias Jonsson	2008-07-03
      Bug#36001 Partitions: spelling and using some error messages
      
      Changed error message to show that it is partitioning
      that does not support foreign keys yet.
      
      Changed spelling from British english to American english.
[1 Dec 2008 19:51] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/60319

2770 Mattias Jonsson	2008-12-01
      pre push fix for bug#36001
      
      Fixed additional test results
[8 Dec 2008 16:19] Mattias Jonsson
pushed into mysql-6.0-bugteam
[8 Jan 11:37] Jon Stephens
"REORGANISE PARTITION without parameters can only be used on auto-partitioned tables using
HASH PARTITIONs" would be better worded as:

"REORGANIZE PARTITION without parameters can only be used on auto-partitioned tables using
HASH partitioning"

Note that attempting to use 'REORGANISE PARTITION' results in a syntax error.

This fix also needs to go into 5.1 and 5.1-telco-6.* trees, please.

Thanks!
[20 Jan 19:59] Bugs System
Pushed into 6.0.10-alpha (revid:joro@sun.com-20090119171328-2hemf2ndc1dxl0et) (version
source revid:azundris@mysql.com-20081230114916-c290n83z25wkt6e4) (merge vers: 6.0.9-alpha)
(pib:6)
[20 Jan 22:23] Jon Stephens
Documented in the 6.0.10 changelog as follows:

        Several error messages relating to partitioned tables were
        incorrect or missing.

As discussed in my previous comments, I'm resetting this bug to Open and asking for a
review with a mind to applying this fix in the 5.1-main and 5.1-telco-6.{2,3,4} trees. The
issue with REORGANIZE PARTITION (and no options following) is particularly important for
telco-6.4 - this form of the statement is critical for successful online add nodes
functionality introduced in telco-6.4.

Thanks!
[18 Feb 21:11] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/66798
[18 Feb 21:23] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/66799

2803 Mattias Jonsson	2009-02-18
      Backport of bug#36001 from 6.0 to 5.1
[20 Feb 13:47] Mattias Jonsson
Backported and pushed to 5.1 too.
[13 Mar 20:07] Bugs System
Pushed into 5.1.33 (revid:joro@sun.com-20090313111355-7bsi1hgkvrg8pdds) (version source
revid:azundris@mysql.com-20090224070618-mr7stu6rfcvoj18g) (merge vers: 5.1.33) (pib:6)
[15 Mar 9:34] Jon Stephens
Changelog entry also added to 5.1.33 changelog.

(Cluster trees will pick this up with the next main->telco merges.)

Closed.
[18 Mar 14:17] Bugs System
Pushed into 6.0.11-alpha (revid:joro@sun.com-20090318122208-1b5kvg6zeb4hxwp9) (version
source revid:azundris@mysql.com-20090223123708-n9rf2to3g15br7za) (merge vers:
6.0.10-alpha) (pib:6)
[9 May 18:46] Bugs System
Pushed into 5.1.34-ndb-6.2.18 (revid:jonas@mysql.com-20090508185236-p9b3as7qyauybefl)
(version source revid:jonas@mysql.com-20090508100057-30ote4xggi4nq14v) (merge vers:
5.1.33-ndb-6.2.18) (pib:6)
[9 May 19:43] Bugs System
Pushed into 5.1.34-ndb-6.3.25 (revid:jonas@mysql.com-20090509063138-1u3q3v09wnn2txyt)
(version source revid:jonas@mysql.com-20090508175813-s6yele2z3oh6o99z) (merge vers:
5.1.33-ndb-6.3.25) (pib:6)
[9 May 20:40] Bugs System
Pushed into 5.1.34-ndb-7.0.6 (revid:jonas@mysql.com-20090509154927-im9a7g846c6u1hzc)
(version source revid:jonas@mysql.com-20090509073226-09bljakh9eppogec) (merge vers:
5.1.33-ndb-7.0.6) (pib:6)