Bug#36001: Partitions: spelling and using some error messages

Backport from 6.0

Changed error message to show that it is partitioning
that does not support foreign keys yet.

Changed spelling from British english to American english.